@@ -10,7 +10,6 @@
 #include <ctype.h>
 #include <sys/stat.h>
 
-#include <md5.h>
 #include <error.h>
 
 mode_t user_umask;
